# init-gmouse

./: CMakeLists.txt  paths.cmake  pkg_create.cmake
a4tool/: CMakeLists.txt  main.cpp
a4toold/: CMakeLists.txt  a4toold.sh.in
libgmouse/: CMakeLists.txt
